--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,25 @@
     text-align: center;
     font-weight: bold;
 }
+#target, #result{
+    font-size: 32px;
+    margin-bottom: 15px;
+    background: #ccc;
+    height:n 60px;
+    line-height: 60px;
+}
+#start,#stop{
+    cursor: pointer;
+    font-size: 18px;
+    width: 145px;
+    background: #eee;
+    height: 40px;
+    line-height: 40px;
+    box-shadow: 0 6px 0 #ccc;
+}
+#start{
+    float: left;
+}
+#stop{
+    float: right;
+}
