--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,13 @@
     height:n 60px;
     line-height: 60px;
 }
+#result.perfect{
+    background: pink;
+    color: #fff;
+}
+#result.stanby{
+    opacity: 0.5;
+}
 #start,#stop{
     cursor: pointer;
     font-size: 18px;
@@ -26,4 +33,8 @@
 }
 #stop{
     float: right;
+}
+#start.pushed,#stop.pushed{
+    margin-top: 3px;
+    box-shadow: 0 3px 0 #ccc;
 }
